# colorex-wallet

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: architecture.md  colorex-broker-api.md  m1-wasm-spike.md  sign-request.md  spv-consignment-verification.md  swap-flow.md  threat-model.md
rgb-wasm/: Cargo.toml  rust-toolchain.toml
rgb-wasm/schemas/: NonInflatableAsset.rgb
rgb-wasm/src/: lib.rs
rgb-wasm/src/spv/: difficulty.rs  headers.rs  merkle.rs  mod.rs  proofpack.rs  verify.rs
rgb-wasm/tests/: multi_asset_witness.rs
rgb-wasm/tests/fixtures/: asset_a.consignment  asset_b.consignment
scripts/: check-supply-chain.mjs  check-vendor-sync.mjs  vendor-manifest.json
src/: manifest.ts
src/colorex/: client.ts  rgb-delta.test.ts  rgb-delta.ts  sign-request.ts  swap-rgb.test.ts  swap-rgb.ts  types.ts
src/provider/: content-script.ts  inject.ts
src/sdk/: store-sdk.ts  stub.ts  wallet-sdk.ts
src/types/: sign-request.ts
src/ui/: App.tsx  atoms.tsx  chrome.tsx  clipboard.ts  data.ts  main.tsx  mock.ts  queue-client.ts  theme.ts
src/ui/screens/: ConnectScreen.tsx  Home.tsx  Lock.tsx  Onboarding.tsx  SignScreen.tsx
src/wallet/: checkpoint-extend.ts  checkpoint-reconcile.test.ts  checkpoint-reconcile.ts  checkpoint-store.ts  checkpoints.test.ts  checkpoints.ts  esplora.ts  import-queue.ts  keys.ts  password.ts  rgb.ts  sign.ts  spv-verify.ts  store.ts  units.ts  vault.ts  verified-witness-cache.test.ts  verified-witness-cache.ts
src/worker/: background.ts  messages.ts
