[package]
name = "rgb-wasm"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "WASM boundary over the RGB protocol core (rgb-api) for the Colorex browser wallet."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1"
# The RGB engine, no native features (no electrum/fs) — storage/indexer live in JS.
rgb-api = { version = "=0.11.1-rc.6", default-features = false, features = ["serde"] }
# Strict (de)serialization of the in-memory Stock providers → bytes for IndexedDB.
strict_encoding = "=2.8.2"
# wasm randomness backend for the transitive getrandom 0.2 in the RGB tree.
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
