[package]
name = "rgb-wasm"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "WASM boundary over the RGB protocol core (rgb-api) for the Colorex browser wallet."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1"
# Vendored SPV verifier (src/spv) — pure merkle + header validation, no electrum.
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
# The RGB engine, no native features (no electrum/fs) — storage/indexer live in JS.
rgb-api = { version = "=0.11.1-rc.6", default-features = false, features = ["serde"] }
# Strict (de)serialization of the in-memory Stock providers → bytes for IndexedDB.
strict_encoding = "=2.8.2"
# Confined<Vec<u8>> for the (de)serialize byte conversions.
amplify = "4.8"
# Bitcoin wallet (descriptors, address derivation, PSBT, signing) — no fs/electrum.
bp-std = { version = "=0.11.1-alpha.2", default-features = false, features = ["client-side-validation", "serde", "signers"] }
bp-wallet = { version = "=0.11.1-alpha.2", default-features = false, features = ["signers", "client-side-validation"] }
# wasm randomness backend for the transitive getrandom 0.2 in the RGB tree.
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
base64 = "0.22"

[profile.release]
opt-level = "s"
